updated country list creation to filter out aggregate regions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <option value="">Select a country</option>
                 </select>
 
-                <input type="submit" value="Compare" class="compareButton">
+                <label for="compareButton" class="sr-only">Click to Compare two countries</label>
+                <input type="submit" value="Compare" class="compareButton" id="compareButton">
             </form>
         </header>
         <main>
