--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         <main>
             <section class="results">
                     <div class="resultsA">
+                        <div class="flag1"></div>
                         <div class="countryName"></div>
                         <ul class="indicatorData"></ul>
                     </div>
                     <div class="resultsB">
+                        <div class="flag2"></div>
                         <div class="countryName"></div>
                         <ul class="indicatorData"></ul>
                     </div>   
