updated background colour and compare button styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
         <header>
             <h1>Our World in Data</h1>
+            <h2>Select two countries to compare their stats</h2>
             <form action="#" class="selectCountries">
                 <label for="countryA" class="sr-only">Select the first country</label>
                 <select id="countryA" name="countryA" class="countries" >
@@ -25,6 +26,7 @@
                 <label for="compareButton" class="sr-only">Click to Compare two countries</label>
                 <input type="submit" value="Compare" class="compareButton" id="compareButton">
             </form>
+            <h3 class="error"></h3>
         </header>
         <main>
             <section class="results">
