added created by line and cleaned up styles for the header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body id="background">
         <header>
             <div class="wrapper">
+                <p>Created at <a href="https://junocollege.com/">Juno College</a> by Kevin Zhang and David Benitez</p>
                 <h1>Our World in Data</h1>
                 <h2>Select two countries to compare their stats</h2>
                 <form action="#" class="selectCountries">
