moved created by line to footer and added an API and data acknowledgement

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <body id="background">
         <header>
             <div class="wrapper">
-                <p>Created at <a href="https://junocollege.com/">Juno College</a> by Kevin Zhang and David Benitez</p>
                 <h1>Our World in Data</h1>
                 <h2>Select two countries to compare their stats</h2>
                 <form action="#" class="selectCountries">
@@ -46,6 +45,12 @@
                 </section>
             </div>
         </main>
+        <footer>
+            <div class="wrapper">
+                <p>Created at <a href="https://junocollege.com/">Juno College</a> by Kevin Zhang and David Benitez</p>
+                <p class="smallCopy">Data courtesy of the World Bank API (Most recent data as of 2020)</p>
+            </div>
+        </footer>
     <script src="app.js"></script>
     </body>
 </html>
