changed page title and subheading

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Our World in Data</title>
+    <title>What is Climate Justice?</title>
 </head>
     <body id="background">
         <header>
             <div class="wrapper">
-                <h1>Our World in Data</h1>
-                <h2>Select two countries to compare their stats</h2>
+                <h1>What is Climate Justice?</h1>
+                <h2>A perspective by the numbers</h2>
                 <form action="#" class="selectCountries">
                     <label for="countryA" class="sr-only">Select the first country</label>
                     <select id="countryA" name="countryA" class="countries" >
