--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="wrapper">
                 <h1>What is Climate Justice?</h1>
-                <h2>A perspective in numbers</h2>
+                <h2>a perspective in numbers</h2>
                 <form action="#" class="selectCountries">
                     <label for="countryA" class="sr-only">Select the first country</label>
                     <select id="countryA" name="countryA" class="countries" >
